tests/rosetta/out/C/abelian-sandpile-model-identity.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:40Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:40Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static list_int s4;
static list_int s1;
static list_int s2;
static list_int s3_a;
static list_int s3_b;
static list_int s3;
static list_int s3_id;
static list_int s4b;
static list_int s5;

list_list_int neighborsList() {
  list_int tmp2 = list_int_create(2);
  tmp2.data[0] = 1;
  tmp2.data[1] = 3;
  list_int tmp3 = list_int_create(3);
  tmp3.data[0] = 0;
  tmp3.data[1] = 2;
  tmp3.data[2] = 4;
  list_int tmp4 = list_int_create(2);
  tmp4.data[0] = 1;
  tmp4.data[1] = 5;
  list_int tmp5 = list_int_create(3);
  tmp5.data[0] = 0;
  tmp5.data[1] = 4;
  tmp5.data[2] = 6;
  list_int tmp6 = list_int_create(4);
  tmp6.data[0] = 1;
  tmp6.data[1] = 3;
  tmp6.data[2] = 5;
  tmp6.data[3] = 7;
  list_int tmp7 = list_int_create(3);
  tmp7.data[0] = 2;
  tmp7.data[1] = 4;
  tmp7.data[2] = 8;
  list_int tmp8 = list_int_create(2);
  tmp8.data[0] = 3;
  tmp8.data[1] = 7;
  list_int tmp9 = list_int_create(3);
  tmp9.data[0] = 4;
  tmp9.data[1] = 6;
  tmp9.data[2] = 8;
  list_int tmp10 = list_int_create(2);
  tmp10.data[0] = 5;
  tmp10.data[1] = 7;
  list_int tmp1_data[] = {tmp2, tmp3, tmp4, tmp5, tmp6,
                          tmp7, tmp8, tmp9, tmp10};
  list_list_int tmp1 = {9, tmp1_data};
  return tmp1;
}

list_int plus(list_int a, list_int b) {
  list_int res = list_int_create(0);
  __auto_type i = 0;
  while (i < a.len) {
    res = 0;
    i = i + 1;
  }
  return res;
}

int isStable(list_int p) {
  for (int tmp11 = 0; tmp11 < p.len; tmp11++) {
    int v = p.data[tmp11];
    if (v > 3) {
      return 0;
    }
  }
  return 1;
}

int topple(list_int p) {
  __auto_type neighbors = neighborsList();
  __auto_type i = 0;
  while (i < p.len) {
    if (p.data[i] > 3) {
      p.data[i] = p.data[i] - 4;
      __auto_type nbs = neighbors.data[i];
      for (int tmp12 = 0; tmp12 < nbs.len; tmp12++) {
        int j = nbs.data[tmp12];
        p.data[j] = p.data[j] + 1;
      }
      return 0;
    }
    i = i + 1;
  }
  return 0;
}

char *pileString(list_int p) {
  __auto_type s = "";
  __auto_type r = 0;
  while (r < 3) {
    __auto_type c = 0;
    while (c < 3) {
      char *tmp13 = _str(p.data[3 * r + c]);
      char *tmp14 = concat_string(s, tmp13);
      char *tmp15 = concat_string(tmp14, " ");
      s = tmp15;
      c = c + 1;
    }
    char *tmp16 = concat_string(s, "\n");
    s = tmp16;
    r = r + 1;
  }
  return s;
}

int _mochi_main() {
  list_int tmp17 = list_int_create(9);
  tmp17.data[0] = 4;
  tmp17.data[1] = 3;
  tmp17.data[2] = 3;
  tmp17.data[3] = 3;
  tmp17.data[4] = 1;
  tmp17.data[5] = 2;
  tmp17.data[6] = 0;
  tmp17.data[7] = 2;
  tmp17.data[8] = 3;
  s4 = tmp17;
  list_int tmp18 = list_int_create(9);
  tmp18.data[0] = 1;
  tmp18.data[1] = 2;
  tmp18.data[2] = 0;
  tmp18.data[3] = 2;
  tmp18.data[4] = 1;
  tmp18.data[5] = 1;
  tmp18.data[6] = 0;
  tmp18.data[7] = 1;
  tmp18.data[8] = 3;
  s1 = tmp18;
  list_int tmp19 = list_int_create(9);
  tmp19.data[0] = 2;
  tmp19.data[1] = 1;
  tmp19.data[2] = 3;
  tmp19.data[3] = 1;
  tmp19.data[4] = 0;
  tmp19.data[5] = 1;
  tmp19.data[6] = 0;
  tmp19.data[7] = 1;
  tmp19.data[8] = 0;
  s2 = tmp19;
  s3_a = plus(s1, s2);
  s3_b = plus(s2, s1);
  list_int tmp20 = list_int_create(9);
  tmp20.data[0] = 3;
  tmp20.data[1] = 3;
  tmp20.data[2] = 3;
  tmp20.data[3] = 3;
  tmp20.data[4] = 3;
  tmp20.data[5] = 3;
  tmp20.data[6] = 3;
  tmp20.data[7] = 3;
  tmp20.data[8] = 3;
  s3 = tmp20;
  list_int tmp21 = list_int_create(9);
  tmp21.data[0] = 2;
  tmp21.data[1] = 1;
  tmp21.data[2] = 2;
  tmp21.data[3] = 1;
  tmp21.data[4] = 0;
  tmp21.data[5] = 1;
  tmp21.data[6] = 2;
  tmp21.data[7] = 1;
  tmp21.data[8] = 2;
  s3_id = tmp21;
  s4b = plus(s3, s3_id);
  s5 = plus(s3_id, s3_id);
  printf("Avalanche of topplings:\n\n");
  printf("%s\n", pileString(s4));
  while ((!isStable(s4))) {
    topple(s4);
    printf("%s\n", pileString(s4));
  }
  printf("Commutative additions:\n\n");
  while ((!isStable(s3_a))) {
    topple(s3_a);
  }
  while ((!isStable(s3_b))) {
    topple(s3_b);
  }
  char *tmp22 = concat_string(pileString(s1), "\nplus\n\n");
  char *tmp23 = concat_string(tmp22, pileString(s2));
  char *tmp24 = concat_string(tmp23, "\nequals\n\n");
  char *tmp25 = concat_string(tmp24, pileString(s3_a));
  printf("%s\n", tmp25);
  char *tmp26 = concat_string("and\n\n", pileString(s2));
  char *tmp27 = concat_string(tmp26, "\nplus\n\n");
  char *tmp28 = concat_string(tmp27, pileString(s1));
  char *tmp29 = concat_string(tmp28, "\nalso equals\n\n");
  char *tmp30 = concat_string(tmp29, pileString(s3_b));
  printf("%s\n", tmp30);
  printf("Addition of identity sandpile:\n\n");
  while ((!isStable(s4b))) {
    topple(s4b);
  }
  char *tmp31 = concat_string(pileString(s3), "\nplus\n\n");
  char *tmp32 = concat_string(tmp31, pileString(s3_id));
  char *tmp33 = concat_string(tmp32, "\nequals\n\n");
  char *tmp34 = concat_string(tmp33, pileString(s4b));
  printf("%s\n", tmp34);
  printf("Addition of identities:\n\n");
  while ((!isStable(s5))) {
    topple(s5);
  }
  char *tmp35 = concat_string(pileString(s3_id), "\nplus\n\n");
  char *tmp36 = concat_string(tmp35, pileString(s3_id));
  char *tmp37 = concat_string(tmp36, "\nequals\n\n");
  char *tmp38 = concat_string(tmp37, pileString(s5));
  printf("%s\n", tmp38);
  return 0;
}
int main() { return _mochi_main(); }
